--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "expo": {
-    "name": "asap-delivery",
-    "slug": "asap-delivery",
+    "name": "instagram",
+    "slug": "instagram-clone",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
